# formazione_coemi

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_REPORT.md  CONTRIBUTING.md  EULA.rtf  EULA.txt  FASE_4_REPORT.md  FASE_6_REPORT.md  Intelleo.spec  README.md  TEST_GUIDE.md  WORKFLOW_GUIDE.md  admin_license_gui.py  anagrafica dipendenti.csv  avvio pytest.txt  avvio.bat  avvio.vbs  boot_loader.py  build_dist.py  check_list_AI.py  check_models.py  commit_output.txt  commit_output_2.txt  commit_output_3.txt  commit_output_4.txt  database.db  deptry_output.txt  dettagli_licenza.txt  errori da correggere.txt  get_client_info.bat  init_db.py  junit.xml  launcher.py  pre_commit_output.txt  pulisci_branch.bat  pyarmor.rkey  pyproject.toml  (+17 more)
.claude/: settings.local.json
.github/workflows/: main_ci.yml
.jules-docs/: AGENTS.md  BUILD_INSTRUCTIONS.md  CRITICAL_FLOWS.md  DATA_MODELS.md  WORKFLOW_GUIDE.md  ai_integration.md  business_logic.md  project_overview.md  testing_guide.md
Licenza/: manifest.json
_LICENZE_CLIENTI/PC COEMI ALLEGRETTI/: dettagli_licenza.txt  pyarmor.rkey
admin/: call_list_IA.py  riepilogo_Bug_Sonar.py
admin/crea_licenze/: admin_license_gui.py  get_client_info.bat  hardware_id.txt  seriale_disco.txt
admin/crea_setup/: EULA.rtf  README_INSTALLER.md  setup_script.iss
admin/offusca/: build_dist.py  build_nuitka.py  build_nuitka_log.txt  rthook_pyqt6.py
admin/tools/: benchmark_builds.py  check_build_environment.py  critical_flows_test.py  generate_obfuscated_keys.py  security_audit.py  stress_test.py  test_build.py  test_path_resolution_integrated.py  validate_docs.py
app/: main.py
app/api/: deps.py  main.py
app/core/: ai_lock.py  config.py  constants.py  db_security.py  license_checker.py  license_security.py  lock_manager.py  path_resolver.py  security.py  string_obfuscation.py
app/db/: models.py  seeding.py  session.py
app/schemas/: schemas.py  system.py
app/services/: ai_extraction.py  ai_tuning.py  certificate_file_service.py  certificate_logic.py  certificate_service.py  chat_service.py  document_locator.py  employee_service.py  entity_extraction.py  file_maintenance.py  geo_service.py  matcher.py  notification_service.py  ocr.py  sync_service.py
app/utils/: audit.py  date_parser.py  file_security.py  logging.py  security.py  sentry_integration.py
cliente/: seriale_disco.txt
desktop_app/: api_client.py  constants.py  dashboard_view.py  edit_dialog.py  import_view.py  ipc_bridge.py  logging_utils.py  main.py  main_window.py  main_window_ui.py  utils.py  utils_append.py  validation_view.py
desktop_app/chat/: app_map.py  chat_controller.py  html_generator.py  phonetic_utils.py
desktop_app/components/: animated_stacked_widget.py  animated_widgets.py  cascade_delegate.py  custom_dialog.py  floating_chat_widget.py  neural_3d.py  notification_center.py  toast.py  update_dialog.py  visuals.py
desktop_app/core/: __init__.py  animation_manager.py  error_boundary.py  signal_guard.py  state_machine.py  thread_manager.py  widget_guard.py
desktop_app/mixins/: __init__.py  safe_widget_mixin.py  safe_worker_mixin.py
desktop_app/services/: document_locator.py  hardware_id_service.py  integrity_service.py  license_manager.py  license_updater_service.py  notification_center.py  path_service.py  proactive_service.py  security_service.py  sound_manager.py  time_service.py  toast_service.py  update_checker.py  voice_service.py  worker_manager.py
desktop_app/view_models/: dashboard_view_model.py  database_view_model.py
desktop_app/views/: anagrafica_view.py  audit_view.py  chat_view.py  config_view.py  contact_dialog.py  dashboard_view.py  database_view.py  dipendenti_view.py  edit_certificato_dialog.py  edit_dialog.py  gantt_item.py  guide_dialog.py  import_view.py  login_view.py  lyra_view.py  modern_guide_view.py  recovery_dialog.py  scadenzario_view.py  splash_screen.py  stats_view.py  validation_view.py
desktop_app/widgets/: __init__.py  advanced_filter.py
desktop_app/workers/: __init__.py  chat_worker.py  csv_import_worker.py  data_worker.py  file_scanner_worker.py  worker.py
docs/: AGENTS.md  AI_ARCHITECTURE.md  AI_ENGINE.md  AI_RULES.md  API_DOCUMENTATION.md  API_REFERENCE.md  BUILD_INSTRUCTIONS.md  CERTIFICATE_LOGIC.md  CONTRIBUTING.md  CRASH_ZERO_ARCHITECTURE.md  CRITICAL_FLOWS.md  DATABASE_SCHEMA.md  DATA_MODELS.md  DEPENDENCIES_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DESKTOP_CLIENT.md  DEVELOPER_ONBOARDING.md  DEV_PROTOCOLS.md  FASE_7_REPORT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_BRIDGE.md  LYRA_PROFILE.md  NOTIFICATION_SYSTEM.md  PERFORMANCE_GUIDE.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE_AND_TESTS.md  README.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT.md  SYSTEM_ARCHITECTURE.md  SYSTEM_DESIGN_REPORT.md  TESTING_GUIDE.md  TEST_GUIDE.md  WORKFLOW_GUIDE.md  audit_report.md  dev_commands.md  known_issues.txt
docs/MIGRAZIONE FINALIZZATA CON NIUTKA/: FASE_2_REPORT.md  FASE_5_REPORT.md  MIGRATION_NOTES.md
docs/bug/: JULES_COMPACT_20251207_1928.md  JULES_COMPACT_20251207_2213.md  JULES_COMPACT_20251208_0032.md  JULES_COMPACT_20251208_0136.md  JULES_COMPACT_20251208_1313.md  JULES_COMPACT_20251208_1643.md  JULES_COMPACT_20251208_1740.md  JULES_COMPACT_20251208_1906.md  JULES_COMPACT_20251208_1934.md  JULES_COMPACT_20251208_2039.md  JULES_COMPACT_20251208_2129.md  JULES_COMPACT_20251209_2011.md  JULES_HOTSPOTS_20251208_0032.md  JULES_HOTSPOTS_20251208_2039.md  JULES_HOTSPOTS_20251208_2129.md  JULES_HOTSPOTS_20251209_2011.md  JULES_PROMPTS_20251207_1928.md  JULES_PROMPTS_20251207_2213.md  JULES_PROMPTS_20251208_0032.md  (+44 more)
guide_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  verify_frontend.py  vite.config.js
prompt/: 7_MYPY_FIXES_CORE_BOTS.md
scripts/: initialize_db.py  populate_db.py
tests/: conftest.py  test_ai_extraction.py  test_ai_extraction_old.py  test_api.py  test_launcher.py  test_launcher_coverage.py  test_services.py
tools/: build_guide.py  copy_license.py  elevate.vbs  fix_pip.bat  get_id_for_admin.py  prepare_installer_assets.py  update_deps.bat  verify_key.py
(+241 files in other folders)
